--- a/Developer.css
+++ b/Developer.css
@@ -22,6 +22,83 @@ titlediv
     padding-top: 25px;
 }
 
+nav
+{
+	
+background-color: lime;
+text-align: center;
+width: 100%;	
+	
+}
+
+nav::after
+{
+	
+content: '';
+display: table;	
+clear: both;	
+	
+}
+
+nav ul
+{
+	
+margin: 0px;	
+padding: 20px;
+list-style: none;	
+	
+}
+
+nav li
+{
+
+display: inline-block;
+text-align: center;    
+margin-left: 40px;
+margin-right: 40px;	
+	
+position: relative;
+	
+}
+
+nav a
+{
+	
+color: black;
+text-decoration: none;
+text-transform: uppercase; 	
+	
+}
+
+nav a:hover 
+{
+	
+color: black
+	
+}
+
+nav a::before
+{
+	
+content: '';
+display: block;
+height: 5px;
+background-color: black;
+
+top: 0;
+width: 0%;	
+
+transition: all ease-in-out 150ms;	
+	
+}
+
+nav a:hover::before
+{
+
+width: 100%;	
+	
+}
+
 developerdiv
 {
     
