--- a/ScottishWildlifeTrust.css
+++ b/ScottishWildlifeTrust.css
@@ -17,85 +17,87 @@ titlediv
 {
     text-align: center;
     color: white;
-    font-size: 50px;
+    font-size: 60px;
     text-decoration: underline;
     padding-top: 25px;
+    font-family: 'Fjalla One' , sans-serif;
+    text-decoration-color: lime;
 }
 
 nav
 {
 	
-background-color: lime;
-text-align: center;
-width: 100%;	
+    background-color: lime;
+    text-align: center;
+    width: 100%;	
 	
 }
 
 nav::after
 {
 	
-content: '';
-display: table;	
-clear: both;	
+    content: '';
+    display: table;	
+    clear: both;	
 	
 }
 
 nav ul
 {
 	
-margin: 0px;	
-padding: 20px;
-list-style: none;	
+    margin: 0px;	
+    padding: 20px;
+    list-style: none;	
 	
 }
 
 nav li
 {
 
-display: inline-block;
-text-align: center;    
-margin-left: 40px;
-margin-right: 40px;	
+    display: inline-block;
+    text-align: center;    
+    margin-left: 40px;
+    margin-right: 40px;	
 	
-position: relative;
+    position: relative;
 	
 }
 
 nav a
 {
 	
-color: black;
-text-decoration: none;
-text-transform: uppercase; 	
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase; 	
 	
 }
 
 nav a:hover 
 {
 	
-color: black
+    color: black
 	
 }
 
 nav a::before
 {
 	
-content: '';
-display: block;
-height: 5px;
-background-color: black;
+    content: '';
+    display: block;
+    height: 5px;
+    background-color: black;
 
-top: 0;
-width: 0%;	
+    top: 0;
+    width: 0%;	
 
-transition: all ease-in-out 150ms;	
+    transition: all ease-in-out 150ms;	
 	
 }
 
 nav a:hover::before
 {
 
-width: 100%;	
+    width: 100%;	
 	
 }
 
@@ -112,8 +114,10 @@ swtdiv
     
     text-align: center;
     color: white;
-    font-size: 40px;
+    font-size: 50px;
     text-decoration: underline;
+    font font-family: 'Zen Antique' , serif;
+    text-decoration-color: lime; 
     
 }
 
@@ -122,4 +126,5 @@ swtdiv
     text-align: center;
     color: white;
     font-size: 18px;
+    font-family:  'Overpass' , sans-serif;
 }
