--- a/ScottishWildlifeTrust.css
+++ b/ScottishWildlifeTrust.css
@@ -129,6 +129,24 @@ swtdiv
     font-family:  'Overpass' , sans-serif;
 }
 
+.swtbi
+{
+    
+    float: right;
+    margin-top: 30px;
+    padding-right: 75px;
+    
+}
+
+.swtoi
+{
+    
+    float: left;
+    margin-top: 30px;
+    padding-left: 75px;
+    
+}
+
 .swtv
 {
     
