--- a/ScottishWildlifeTrust.css
+++ b/ScottishWildlifeTrust.css
@@ -129,7 +129,7 @@ swtdiv
     font-family:  'Overpass' , sans-serif;
 }
 
-.swtbi
+.beaveri
 {
     
     float: right;
@@ -138,7 +138,7 @@ swtdiv
     
 }
 
-.swtoi
+.ospreyi
 {
     
     float: left;
