--- a/GameInfo.css
+++ b/GameInfo.css
@@ -129,3 +129,50 @@ infodiv
     font-family:  'Overpass' , sans-serif;
     
 }
+
+.tableh
+{
+    
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    text-decoration: underline;
+    font font-family: 'Zen Antique' , serif;
+    text-decoration-color: lime; 
+    
+}
+
+.tablep
+{
+    
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    font-family:  'Overpass' , sans-serif;
+    
+}
+
+table
+{
+    
+  font font-family: 'Zen Antique' , serif;
+  border-collapse: collapse;
+  width: 50%;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+    
+}
+
+td, th {
+    
+  border: 4px solid;
+  border-color: darkgrey;
+  text-align: left;
+  padding: 8px;
+    
+}
+
+tr:nth-child(even) {
+  background-color: darkgrey;
+}
