Added heading to Image on BTS page

--- a/BTS.css
+++ b/BTS.css
@@ -144,6 +144,18 @@ btsdiv
     
 }
 
+.ebackgroundh
+{
+    
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    text-decoration: underline;
+    font font-family: 'Zen Antique' , serif;
+    text-decoration-color: lime; 
+    
+}
+
 .ebackgroundp
 {
     
