Patched up issues on each page

--- a/BTS.css
+++ b/BTS.css
@@ -116,7 +116,7 @@ btsdiv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
@@ -151,7 +151,7 @@ btsdiv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
