--- a/Index.css
+++ b/Index.css
@@ -118,7 +118,7 @@ welcomediv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
@@ -138,7 +138,7 @@ welcomediv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
