--- a/ScottishWildlifeTrust.css
+++ b/ScottishWildlifeTrust.css
@@ -116,7 +116,7 @@ swtdiv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
