--- a/GameInfo.css
+++ b/GameInfo.css
@@ -116,7 +116,7 @@ infodiv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
@@ -137,7 +137,7 @@ infodiv
     color: white;
     font-size: 50px;
     text-decoration: underline;
-    font font-family: 'Zen Antique' , serif;
+    font-family: 'Zen Antique' , serif;
     text-decoration-color: lime; 
     
 }
@@ -155,24 +155,28 @@ infodiv
 table
 {
     
-  font font-family: 'Zen Antique' , serif;
-  border-collapse: collapse;
-  width: 50%;
-  color: white;
-  margin-left: auto;
-  margin-right: auto;
+    font-family: 'Zen Antique' , serif;
+    border-collapse: collapse;
+    width: 50%;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
-td, th {
+td, th
+{
     
-  border: 4px solid;
-  border-color: darkgrey;
-  text-align: left;
-  padding: 8px;
+    border: 4px solid;
+    border-color: darkgrey;
+    text-align: left;
+    padding: 8px;
     
 }
 
-tr:nth-child(even) {
-  background-color: darkgrey;
+tr:nth-child(even)
+{
+    
+    background-color: darkgrey;
+    
 }
